--- a/public/css/Component/Admin/Admin_Center_Main_Request_Cancelled.css
+++ b/public/css/Component/Admin/Admin_Center_Main_Request_Cancelled.css
@@ -9,8 +9,8 @@
 
     #centers i {
         color: var(--green-color-one);
-      }
-    
+    }
+
     #centers h3 {
         color: var(--green-color-one);
     }
@@ -41,13 +41,13 @@
     }
 
     .table-header {
-        grid-template-columns: 10% 13% 13% 12.5% 12.5% 12% 12% 15%;
+        grid-template-columns: 10% 13% 13% 12.5% 12.5% 12% 12% 7% 8%;
     }
 
     .table-row {
         height: 52px;
         display: grid;
-        grid-template-columns: 10% 13% 13% 12.5% 12.5% 12% 12% 15%;
+        grid-template-columns: 10% 13% 13% 12.5% 12.5% 12% 12% 7% 8%;
     }
 
     .table td {
@@ -64,7 +64,7 @@
         cursor: pointer;
     }
 
-    .collector_img{
+    .collector_img {
         width: 35px !important;
         height: 35px !important;
         border-radius: 50%;
@@ -80,22 +80,6 @@
         z-index: 2;
         display: none;
     }
-
-
-    /*Location Pop*/
-    /* .location_pop {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1;
-        display: none;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-    } */
 
     .location_pop {
         display: flex;
@@ -125,7 +109,7 @@
         padding-bottom: 40px;
         height: 350px;
         overflow: hidden;
-      
+
     }
 
     .location_pop_map {
@@ -236,8 +220,8 @@
         }
     }
 
-     /*request details*/
-     .request-details-pop {
+    /*request details*/
+    .request-details-pop {
         display: flex;
         position: fixed;
         top: 50%;
@@ -256,10 +240,10 @@
 
     .request-details-pop.active {
         transform: translate(-50%, -50%) scale(1);
-            
+
     }
 
-     /* .request-details-pop {
+    /* .request-details-pop {
         position: fixed;
         top: 0;
         left: 0;
@@ -343,7 +327,7 @@
         padding-top: 40px;
         padding-left: 40px;
         padding-bottom: 50px;
-       
+
     }
 
     .request-details-right-labels span {
@@ -360,7 +344,7 @@
         padding-top: 40px;
         padding-left: 90px;
         padding-bottom: 50px;
-       
+
     }
 
     .request-details-right-values span {
@@ -370,6 +354,99 @@
         font-weight: 550;
     }
 
+    /*Cancel confirm popup*/
+    .delete_confirm {
+        display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
+        z-index: 4;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+    }
 
-    
+    .delete_confirm.active {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .delete_confirm.active+overlay {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .popup {
+        width: 400px;
+        background-color: var(--background-color-main);
+
+        top: 0;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: var();
+    }
+
+    .popup a {
+        width: auto;
+    }
+
+    .open-popup {
+        visibility: visible;
+        top: 50%;
+    }
+
+    .popup img {
+        width: 100px;
+        margin-top: 35px;
+        border-radius: 50%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .popup h2 {
+        font-size: 23px;
+        font-weight: 600;
+        margin: 10px 0 10px;
+    }
+
+    .btns {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .deletebtn {
+        width: 150px;
+        margin-top: 30px;
+        margin-right: 20px;
+        padding: 10px 0;
+        background: var(--red-color);
+        color: var(--background-color-main);
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: var(--box-shadow);
+    }
+
+    .cancelbtn {
+        width: 150px;
+        margin-top: 30px;
+        padding: 10px 0;
+        background: #bab3b3;
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    }
+
+
+
 }
