--- a/public/css/Component/Admin/Admin_Center_Top.css
+++ b/public/css/Component/Admin/Admin_Center_Top.css
@@ -32,7 +32,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-around;
+        justify-content: space-between;
         border: 10px;
         width: 100%;
         box-sizing: border-box;
@@ -48,6 +48,7 @@
         justify-content: center;
         width: 35%;
         position: relative;
+        margin-left: -40%;
     }
 
     .main-right-top-search i {
@@ -74,14 +75,6 @@
         border: 1px solid #1ca557;
         outline: none;
     }
-
-    .main-right-top-notification {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-left: 30%;
-    }
-
 
     .main-right-top-profile {
         display: flex;
@@ -138,12 +131,29 @@
     .main-right-top-back-button i {
         font-size: 28px;
         font-weight: 600;
+        margin-left: 100% !important;
+
     }
 
     .main-right-top-back-button i:hover {
-
         color: #1ca557;
     }
+
+    @media screen and (max-width: 1232px) {
+        .main-right-top-search {
+            margin-left: -25%;
+        }
+
+    }
+
+    @media screen and (max-width: 1042px) {
+        .main-right-top-search {
+            margin-left: -0%;
+            width: 300px;
+        }
+
+    }
+
 
     @media screen and (max-width: 1178px) {
         .image2 {
@@ -165,4 +175,14 @@
             flex-direction: column;
         }
     }
+
+    @media screen and (max-width: 862px) {
+        .main-right-top-search i {
+            display: none;
+        }
+    }
+
+    @media screen and (max-width: 570px) {}
+
+
 }
