--- a/public/css/style.css
+++ b/public/css/style.css
@@ -198,6 +198,7 @@
     --table-header: #e9f6ef;
     --yellow-color: #f6e58d;
     --red-color: #F13E3E;
+    --calander-hover-color: #f2f2f2;
 }
 
 
