--- a/public/css/Component/CenterManager/CenterManager_Dashboard.css
+++ b/public/css/Component/CenterManager/CenterManager_Dashboard.css
@@ -69,7 +69,7 @@
         width: 15.5px;
         height: 15.5px;
         border-radius: 50%;
-        background-color: #F13E3E;
+        background-color: var(--red-color);
         margin-top: -11px;
         margin-left: -15px;
         color: var(--background-color-main);
@@ -288,7 +288,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        color: white !important;
+        color: var(--background-color-main) !important;
         letter-spacing: 0.03rem;
         transition: background-color 0.6s ease-in;
 
@@ -389,7 +389,7 @@
      .wrapper{
         width: 100%;
         height: 100%;
-        background: #fff;
+        background: var(--background-color-main);
         border-radius: 10px;
         color: var(--main-text-color);
         /* box-shadow: 0 15px 40px rgba(0,0,0,0.12); */
@@ -481,7 +481,7 @@
       }
 
       .days li.active{
-        color: #fff;
+        color: var(--background-color-main);
       }
 
       .days li::before{
@@ -501,7 +501,8 @@
       }
 
       .days li:not(.active):hover::before{
-        background: #f2f2f2;
+        /* background: #f2f2f2; */
+        background: var(--calander-hover-color);
       }
 
       .days li.selected{
@@ -673,6 +674,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        box-shadow: var(--box-shadow);
     }
 
     .circular-progress::before {
@@ -683,6 +685,7 @@
         border-radius: 50%;
         background-color: var(--background-color-main);
         flex: 2;
+        box-shadow: var(--box-shadow);
     }
 
     .progress-value {
@@ -704,6 +707,7 @@
         height: 15px;
         background:var(--background-color-two) ;
         margin-right: 5px;
+        border: 1px solid;
    }
 
    .completed{
