--- a/public/css/Component/Collector/Collector_Reuqest_Assigned.css
+++ b/public/css/Component/Collector/Collector_Reuqest_Assigned.css
@@ -784,4 +784,213 @@
 
   /* ------------*/
 
+  @media screen and (max-width: 1118px) {
+    .table td {
+        font-size: 12px;
+    }
+
+    .table-header {
+        font-size: 14px;
+    }
+
+    .table-row img {
+        width: 20px;
+        height: 20px;
+    }
+
+    .main-right-top-search {
+        margin-left: 40px;
+    }
+
+    .location_pop_content {
+        width: 550px;
+    }
+}
+
+
+@media screen and (max-width:950px) {
+    .main-right-bottom {
+        width: 100%;
+        overflow-x: scroll;
+    }
+
+    .main-right-bottom-top {
+        width: 140%;
+    }
+
+    .main-right-bottom-down {
+        width: 140%;
+    }
+
+    .location_pop_content{
+      width: 500px;
+  }
+
+  .personal-details-popup-form{
+      width: 600px;
+  }
+  
+
+
+}
+
+@media screen and (max-width:862px) {
+
+    .main-right-top-three-content p {
+        font-size: 14px;
+    }
+
+    .line {
+        width: 86px;
+        height: 2px;
+    }
+
+    .location_pop_content {
+        width: 375px;
+    }
+
+    .personal-details-popup-form {
+        width: 550px;
+    }
+
+    .notification_popup {
+        top: 11%;
+        right: 10%;
+        width: 35%;
+    }
+
+    .request-details-pop-form{
+      width: 450px;
+  }
+
+}
+
+@media screen and (max-width: 844px) {
+    .main-right-top-notification {
+        margin-left: 5%;
+    }
+
+    .main-right-top-search {
+        margin-left: 1px;
+    }
+
+    .main-right-bottom-container {
+        width: 100%;
+        overflow-x: scroll;
+    }
+
+    .main-right-bottom-container-top {
+        width: 100%;
+        overflow-x: scroll;
+    }
+
+    .main-right-bottom-container-container {
+        width: 100%;
+        overflow-x: scroll;
+    }
+
+
+
+
+    .main-right-bottom-two-content h1 {
+        font-size: 15px;
+        text-align: center;
+    }
+
+    .main-right-bottom-two-content p {
+        font-size: 15px;
+    }
+
+    .main-right-bottom-two-content button {
+        height: 30px;
+        width: 145px;
+        font-size: 15px;
+    }
+    .request-details-pop-form{
+      width: 450px;
+  }
+
+
+}
+
+@media screen and (max-width:700px) {
+
+    .main-right-top-search {
+        width: 35%;
+    }
+
+    .main-right-top-search i {
+        left: 10px;
+        margin-left: 10px;
+    }
+
+    .main-right-top-search input {
+        height: 28px;
+        margin-left: 10px;
+    }
+
+    
+        .location_pop_content{
+          width: 300px;
+      }
+
+      .request-details-pop-form{
+          width: 400px;
+      }
+
+      .request-details-right-labels span{
+          font-size: 12px;
+      }
+
+      .request-details-right-values span{
+          font-size: 12px;
+      }
+      
+      .cancel-confirm-content{
+          width: 400px;
+      }
+
+}
+
+@media screen and (max-width:540px) {
+    .main-right-bottom {
+        width: 160%;
+        overflow-x: scroll;
+    }
+
+    .main-right-bottom-top {
+        width: 160%;
+    }
+
+    .main-right-bottom-down {
+        width: 160%;
+    }
+}
+
+@media screen and (max-width:452px) {
+    .location_pop_content {
+        width: 300px;
+    }
+
+    .location_pop_content {
+        height: 300px;
+    }
+    .request-details-right-labels{
+      padding-left: 16px;
+  }
+
+  .request-details-right-values{
+      padding-left: 70px;
+  }
+
+  .request-details-pop-form{
+      width: 300px;
+  }
+
+  .cancel-confirm-content{
+      width: 300px;
+  }
+    
+}
+
 }
