--- a/public/css/Component/Collector/Collector_Request_Cancelled.css
+++ b/public/css/Component/Collector/Collector_Request_Cancelled.css
@@ -11,7 +11,7 @@
     .main-right-bottom {
         flex-direction: column;
         height: 500px;
-        overflow: scroll;
+        overflow: hidden;
         display: flex;
     }
 
@@ -91,8 +91,144 @@
     }
 
 
+   
+    @media screen and (max-width: 1108px ){
+        .location_pop_content{
+            width: 600px;
+        }
+
+        .table td {
+            font-size: 12px;
+        }
+    
+        .table-header {
+            font-size: 12px;
+        }
+    
+        .table-row img {
+            width: 20px;
+            height: 20px;
+        }
+    
+        .main-right-top-search {
+            margin-left: 40px;
+        }
+
+        
+        
+    }
+
+    @media screen and (max-width: 950px ){
+        .location_pop_content{
+            width: 500px;
+        }
+
+        .main-right-bottom {
+            width: 100%;
+            overflow-x: scroll;
+        }
+    
+        .main-right-bottom-top {
+            width: 140%;
+        }
+    
+        .main-right-bottom-down {
+            width: 140%;
+        }
+
+    
+        
+    }
+
+    @media screen and (max-width: 862px ){
+        .location_pop_content{
+            width: 400px;
+        }
 
 
+        .request-details-pop-form{
+            width: 400px;
+        }
+
+        .notification_popup {
+            top: 11%;
+            right: 10%;
+            width: 35%;
+        }
+
+        .main-right-top-three-content p {
+            font-size: 14px;
+        }
+    
+        .line {
+            width: 86px;
+            height: 2px;
+        }
+
+        .main-right-top-notification {
+            margin-left: 5%;
+        }
+    
+        .main-right-top-search {
+            margin-left: 1px;
+        }
+    
+        .main-right-bottom-container {
+            width: 100%;
+            overflow-x: scroll;
+        }
+    
+        .main-right-bottom-container-top {
+            width: 100%;
+            overflow-x: scroll;
+        }
+    
+        .main-right-bottom-container-container {
+            width: 100%;
+            overflow-x: scroll;
+        }
+    
+
+    
+    }
+
+    @media screen and (max-width: 700px ){
+        .location_pop_content{
+            width: 300px;
+        }
+
+        .request-details-pop-form{
+            width: 350px;
+        }
+
+        .request-details-right-labels span{
+            font-size: 12px;
+        }
+
+        .request-details-right-values span{
+            font-size: 12px;
+        }
+        
+     
+    }
+
+    
+    @media screen and (max-width:500px) {
+        .request-details-right-labels{
+            padding-left: 16px;
+        }
+
+        .request-details-right-values{
+            padding-left: 70px;
+        }
+
+        .request-details-pop-form{
+            width: 300px;
+        }
+
+    
+
+    }
 
 
 
